apps/keycloak/components/httproute/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: ${KEYCLOAK_NAMESPACE:-keycloak}
spec:
  parentRefs:
    - name: ${GATEWAY_NAME:-cilium-gateway}
      namespace: ${GATEWAY_NAMESPACE:-default}
  hostnames:
    - "${INGRESS_HOSTNAME:-keycloak}.${INGRESS_DOMAIN}"
  rules:
    - backendRefs:
        - name: keycloak-deployment
          port: 80
